# lightweightvk

./: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  deploy_content.py  deploy_content_android.py  deploy_deps.py
.github/workflows/: c-cpp.yml
android/: build.gradle  settings.gradle.in
android/app/: MainActivity.java.in  build.gradle.in
android/lvklib/: build.gradle
android/lvklib/src/main/java/org/lvk/samples/: LvkActivity.java  LvkLauncherActivity.java
lvk/: CMakeLists.txt  HelpersImGui.cpp  HelpersImGui.h  LVK.cpp  LVK.h  LVK.mm  Pool.h
lvk/vulkan/: CMakeLists.txt  VulkanClasses.cpp  VulkanClasses.h  VulkanUtils.cpp  VulkanUtils.h  XrUtils.cpp  XrUtils.h
samples/: .clang-tidy  001_HelloTriangle.cpp  002_RenderToCubeMap.cpp  003_RenderToCubeMapSinglePass.cpp  004_YUV.cpp  005_MeshShaders.cpp  006_SwapchainHDR.cpp  007_DynamicRenderingLocalRead.cpp  008_MeshShaderFireworks.cpp  009_TriplanarMapping.cpp  010_OmniShadows.cpp  Bistro.h  CMakeLists.txt  DEMO_001_SolarSystem.cpp  DEMO_002_Bistro.cpp  RTX_001_Hello.cpp  RTX_002_AO.cpp  RTX_003_Pipeline.cpp  RTX_004_Textures.cpp  Tiny_MeshLarge.cpp  VulkanApp.cpp  VulkanApp.h
