# LightweightVK
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

cmake_minimum_required(VERSION 3.22)

project(LVKVulkan CXX C)

file(GLOB SRC_FILES LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)
file(GLOB HEADER_FILES LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)

if(NOT LVK_WITH_OPENXR)
  list(REMOVE_ITEM SRC_FILES "XrUtils.cpp")
endif()

add_library(LVKVulkan STATIC ${SRC_FILES} ${HEADER_FILES})

lvk_setup_target(LVKVulkan)
lvk_set_folder(LVKVulkan "LVK")

lvk_setup_groups("${SRC_FILES}")
lvk_setup_groups("${HEADER_FILES}")

# SPIRV-Headers and SPIRV-Tools are added before glslang so its `if(NOT TARGET SPIRV-Tools-opt)` check skips its bundled External/ path.
# cmake-format: off
set(SPIRV_SKIP_TESTS        ON  CACHE BOOL "")
set(SPIRV_SKIP_EXECUTABLES  ON  CACHE BOOL "")
set(SPIRV_WERROR            OFF CACHE BOOL "")
add_subdirectory(${LVK_ROOT_DIR}/third-party/deps/src/SPIRV-Headers "SPIRV-Headers")
add_subdirectory(${LVK_ROOT_DIR}/third-party/deps/src/SPIRV-Tools   "SPIRV-Tools")
foreach(t IN ITEMS
    SPIRV-Headers
    SPIRV-Tools-static
    SPIRV-Tools-shared
    SPIRV-Tools-opt
    SPIRV-Tools-link
    SPIRV-Tools-lint
    SPIRV-Tools-reduce
    SPIRV-Tools-diff
    core_tables
    extinst_tables
    spirv-tools-tables
    spirv-tools-build-version
    spirv-tools-pkg-config
    spirv-tools-vimsyntax
    spirv-tools-header-DebugInfo
    spirv-tools-header-OpenCLDebugInfo100
    spirv-tools-header-NonSemanticShaderDebugInfo100
    spirv-tools-check-python-types
    spirv-tools-check-python-tests)
  if(TARGET ${t})
    lvk_set_folder(${t} "third-party/SPIRV-Tools")
  endif()
endforeach()
if(TARGET spirv-tools-check-python-tests)
  set_target_properties(spirv-tools-check-python-tests PROPERTIES EXCLUDE_FROM_ALL ON)
endif()
# cmake-format: on

# glslang
# cmake-format: off
set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
set(ENABLE_HLSL             OFF CACHE BOOL "")
set(ENABLE_CTEST            OFF CACHE BOOL "")
set(ENABLE_OPT              ON  CACHE BOOL "")
set(ENABLE_SPVREMAPPER      OFF CACHE BOOL "")
set(SKIP_GLSLANG_INSTALL    ON  CACHE BOOL "")
add_subdirectory(${LVK_ROOT_DIR}/third-party/deps/src/glslang "glslang")
lvk_set_folder(GenericCodeGen     "third-party/glslang")
lvk_set_folder(glslang            "third-party/glslang")
lvk_set_folder(MachineIndependent "third-party/glslang")
lvk_set_folder(OSDependent        "third-party/glslang")
lvk_set_folder(SPIRV              "third-party/glslang")
lvk_set_folder(glslang-default-resource-limits "third-party/glslang")
# cmake-format: on

# slang
# cmake-format: off
if(LVK_WITH_SLANG)
  set(SLANG_ENABLE_CUDA          OFF CACHE BOOL "")
  set(SLANG_ENABLE_OPTIX         OFF CACHE BOOL "")
  set(SLANG_ENABLE_NVAPI         OFF CACHE BOOL "")
  set(SLANG_ENABLE_XLIB          OFF CACHE BOOL "")
  set(SLANG_ENABLE_AFTERMATH     OFF CACHE BOOL "")
  set(SLANG_ENABLE_DX_ON_VK      OFF CACHE BOOL "")
  set(SLANG_ENABLE_GFX           OFF CACHE BOOL "")
  set(SLANG_ENABLE_SLANGC        ON  CACHE BOOL "")
  set(SLANG_ENABLE_SLANGRT       ON  CACHE BOOL "")
  set(SLANG_ENABLE_SLANG_GLSLANG OFF CACHE BOOL "")
  set(SLANG_ENABLE_TESTS         OFF CACHE BOOL "")
  set(SLANG_ENABLE_EXAMPLES      OFF CACHE BOOL "")
  set(SLANG_ENABLE_REPLAYER      OFF CACHE BOOL "")
  set(SLANG_ENABLE_PREBUILT_BINARIES OFF CACHE BOOL "")
  set(SLANG_EMBED_CORE_MODULE_SOURCE OFF CACHE BOOL "")
  set(SLANG_ENABLE_DXIL              OFF CACHE BOOL "")
  set(SLANG_RHI_ENABLE_D3D11         OFF CACHE BOOL "")
  set(SLANG_RHI_ENABLE_D3D12         OFF CACHE BOOL "")
  set(SLANG_RHI_ENABLE_METAL         OFF CACHE BOOL "")
  set(SLANG_RHI_ENABLE_CUDA          OFF CACHE BOOL "")
  set(SLANG_RHI_ENABLE_WGPU          OFF CACHE BOOL "")
  add_subdirectory(${LVK_ROOT_DIR}/third-party/deps/src/slang "slang")
  lvk_set_folder(miniz                  "third-party")
  lvk_set_folder(lz4_static             "third-party")
  lvk_set_folder(compiler-core          "third-party/slang")
  lvk_set_folder(core                   "third-party/slang")
  lvk_set_folder(slang                  "third-party/slang")
  lvk_set_folder(slangc                 "third-party/slang")
  lvk_set_folder(slangd                 "third-party/slang")
  lvk_set_folder(slangi                 "third-party/slang")
  lvk_set_folder(slang-common-objects   "third-party/slang")
  lvk_set_folder(slang-dispatcher       "third-party/slang")
  if(TARGET slang-proxy)
    lvk_set_folder(slang-proxy            "third-party/slang")
  endif()
  lvk_set_folder(slang-rt               "third-party/slang")
  lvk_set_folder(slang-rhi              "third-party/slang")
  lvk_set_folder(slang-rhi-copy-files   "third-party/slang")
  lvk_set_folder(slang-rhi-resources    "third-party/slang")
  lvk_set_folder(slang-rhi-tests        "third-party/slang")
  target_compile_definitions(LVKVulkan PUBLIC "LVK_WITH_SLANG=1")
  target_link_libraries(LVKVulkan PRIVATE slang-rt core)
  target_include_directories(LVKVulkan PRIVATE "${LVK_ROOT_DIR}/third-party/deps/src/slang/include")
endif()
# cmake-format: on

# SPIRV-Reflect
set(SPIRV_REFLECT_EXECUTABLE OFF CACHE BOOL "")
set(SPIRV_REFLECT_STATIC_LIB ON  CACHE BOOL "")
add_subdirectory(${LVK_ROOT_DIR}/third-party/deps/src/SPIRV-Reflect "SPIRV-Reflect")
lvk_set_folder(spirv-reflect-static "third-party")

find_package(Vulkan REQUIRED)

if(LVK_WITH_SPIRV_OPT)
  target_compile_definitions(LVKVulkan PRIVATE LVK_WITH_SPIRV_OPT)
  target_link_libraries(LVKVulkan PRIVATE SPIRV-Tools-opt)
endif()

target_link_libraries(LVKVulkan INTERFACE LVKLibrary)
target_link_libraries(LVKVulkan PRIVATE glslang SPIRV glslang-default-resource-limits)
target_link_libraries(LVKVulkan PRIVATE spirv-reflect-static)
if(LVK_WITH_MINILOG)
  target_link_libraries(LVKVulkan INTERFACE minilog)
  target_compile_definitions(LVKVulkan PRIVATE LVK_WITH_MINILOG)
endif()
if(LVK_WITH_SLANG)
  target_link_libraries(LVKVulkan PRIVATE slang)
  target_link_libraries(LVKVulkan PRIVATE slang-rt)
endif()

target_link_libraries(LVKVulkan PUBLIC Vulkan::Vulkan)

if(LVK_WITH_OPENXR)
  target_compile_definitions(LVKVulkan PRIVATE "XR_USE_GRAPHICS_API_VULKAN=1")
  target_compile_definitions(LVKVulkan PUBLIC  "LVK_WITH_OPENXR=1")
  target_link_libraries(LVKVulkan PUBLIC OpenXR::openxr_loader)
  target_include_directories(LVKVulkan PUBLIC "${LVK_ROOT_DIR}/third-party/deps/src/openxr-sdk/include")
endif()

target_include_directories(LVKVulkan PUBLIC "${LVK_ROOT_DIR}/third-party/deps/src/")
target_include_directories(LVKVulkan PUBLIC "${LVK_ROOT_DIR}/third-party/deps/src/volk")
target_include_directories(LVKVulkan PUBLIC "${LVK_ROOT_DIR}/third-party/deps/src/vma/include")
target_include_directories(LVKVulkan PUBLIC "${LVK_ROOT_DIR}/third-party/deps/src/vulkan-headers/include")

if(WIN32)
  add_definitions("-DVK_USE_PLATFORM_WIN32_KHR=1")
  add_definitions("-DNOMINMAX")
elseif(ANDROID)
  add_definitions("-DVK_USE_PLATFORM_ANDROID_KHR=1")
elseif(UNIX AND NOT APPLE)
  if(WAYLAND_FOUND)
    add_definitions("-DVK_USE_PLATFORM_WAYLAND_KHR=1")
  else()
    add_definitions("-DVK_USE_PLATFORM_XLIB_KHR=1")
  endif()
elseif(APPLE)
  if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    add_definitions("-DVK_USE_PLATFORM_MACOS_MVK=1")
    add_definitions("-DVK_USE_PLATFORM_METAL_EXT=1")
  endif()
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  target_compile_options(LVKVulkan PRIVATE "-Wno-nullability-completeness")
endif()
